[package]
name = "woollib"
version = "0.1.0"
edition = "2024"

[dependencies]
trove = { git = "https://github.com/mentalblood0/trove" }
anyhow = { version = "1.0.100", features = ["std", "backtrace"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["std", "unbounded_depth"] }

[dev-dependencies]
nanorand = "0.8"
pretty_assertions = "1.4"
serde-saphyr = { git = "https://github.com/bourumir-wyngs/serde-saphyr" }
